--- a/README
+++ b/README
@@ -1,8 +1,3 @@
-This is the starter code for the Anagrams workshop. 
-This workshop is part of the Applied CS with Android course:
+## Applied-CS-with-Android
 
 http://g.co/cswithandroid
-
-Check the website for detailed instructions on how to implement this activity.
-
-Version 1.0
